# Anunix

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE-2026.4.16.md  RELEASE-2026.4.18-1.md  RELEASE-2026.4.19.md  RELEASE-2026.4.23.md  RELEASE-2026.4.24.md  perf.txt  pyproject.toml
cli/: __init__.py  main.py
config/: default.toml  grub.cfg
distd/: install.sh  manage.py  server.py
docs/: AI_NATIVE_OS_ARCHITECTURE_PROPOSAL.md  tool-plan.md
examples/: meeting_recording.py
rfcs/: RFC-0002-state-object-model.md
superrouter/: install.sh  manage.py  schema.sql  server.py
system-font/: anx_schoolbook_12x24.bdf  anx_schoolbook_12x24.h  gen_anx_font.py
tests/: test_a11y.c  test_anunixmacs.c  test_anxml.c  test_audio.c  test_capability.c  test_cell_lifecycle.c  test_cell_runtime.c  test_clipboard.c  test_compositor_cell.c  test_compositor_dirty_rect.c  test_conformance_gate.c  test_conformance_harness.c  test_crypto.c  test_decompile_pipeline.c  test_diag.c  test_diag_inline.c  test_disk_store.c  test_ebm.c  test_engine_lifecycle.c  test_engine_registry.c  test_event_qos.c  test_external_call.c  test_fb.c  test_hda.c  test_ibal.c  test_input_routing.c  test_isolation.c  test_kickstart.c  test_media.c  test_memplane.c  test_model.c  test_model_server.c  test_multi_surface.c  test_posix.c  test_resource_lease.c  test_rlm.c  test_route_planner.c  test_sandbox_lens.c  test_scheduler.c  test_shm_ipc.c  (+12 more)
tools/: anxbproxy.py  build-iso.sh  build-qemu.sh  conformance_harness.py  deploy_framework.sh  fetch-grub.sh  fetch-llvm.sh  provision_ssh.sh  utm-create-vm.py
userland/: Makefile
(+553 files in other folders)
